--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
             justify-content:space-around;
             margin-top: 20px;
             
-
      }
     </style>
 </head>
@@ -63,17 +62,19 @@
           </div>
 
         <div>
-            <select name="" id="">
-                <option value="Mens">Mens Clothing</option>
-                <option value="Womens">women Clothing</option>
+            <select  id="sortbytype">
+                <option value="mens">Mens Clothing</option>
+                <option value="womens">women Clothing</option>
+                <option value="electronic">Electronics</option>
+                <option value="jewellery">Jewellery</option>
                </select>
         </div>
 
           <div>
 
-            <select name="" id="">
-                <option value="">Price: Low to high</option>
-                <option value="">Price: High to low</option>
+            <select id="sortbyprice">
+                <option value="asc">Price: Low to high</option>
+                <option value="desc">Price: High to low</option>
                </select>
           </div>
 
